--- a/Content/bootstrap/custom.css
+++ b/Content/bootstrap/custom.css
@@ -19,5 +19,5 @@
     position:absolute;
     width:100%;
     height:100%;
-    box-shadow:inset 0px 0px 4px 4px white;
+    box-shadow:inset 0px 0px 8px 8px white;
 }
